# minimal-steiner-tree-enumeration

./: CMakeLists.txt  README.md  bdd.cpp  bdd.h  frontier.cpp  frontier.h  graph.cpp  graph.h  main.cpp  run.sh  state.cpp  state.h  utility.h
dataset/ALUE/alue2087/: alue2087-0  alue2087-1  alue2087-2  alue2087-3  alue2087-4  alue2087-5  edges
dataset/ALUE/alue2105/: alue2105-0  alue2105-1  alue2105-2  alue2105-3  alue2105-4  alue2105-5  edges
dataset/ALUE/alue3146/: alue3146-0  alue3146-1  alue3146-2  alue3146-3  alue3146-4  alue3146-5  edges
dataset/SPG_PUCN/cc3-5n/: cc3-5n-0  cc3-5n-1  cc3-5n-2  cc3-5n-3  cc3-5n-4  cc3-5n-5  edges
dataset/SPG_PUCN/cc5-3n/: cc5-3n-0  cc5-3n-1  cc5-3n-2  cc5-3n-3  cc5-3n-4  cc5-3n-5  edges
dataset/SPG_PUCN/cc6-3n/: cc6-3n-0  cc6-3n-1  cc6-3n-2  cc6-3n-3  cc6-3n-4  cc6-3n-5  edges
dataset/geo_original/G101/: G101-0  G101-1  G101-2  G101-3  G101-4  G101-5  edges
dataset/geo_original/G105/: G105-0  G105-1  G105-2  G105-3  G105-4  G105-5  edges
dataset/geo_original/G301/: G301-0  G301-1  G301-2  G301-3  G301-4  G301-5  edges
